bk_ida/gccida/c0/recog_21
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26399:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26402:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !rtx_equal_p( x1bd->fld[0].rtx, recog_data_0.operand[1]) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26403:37: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !rtx_equal_p( *( rtx *)&x1bd[1], recog_data_0.operand[0]) 
                                    ^~~~~~~~~~~~
                                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26421:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4bf = ( rtx)x3v[1]; 
             ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26426:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3w = ( rtx)x2[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26461:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26462:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3b = (  struct rtx_def *)x2[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26465:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3b; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26474:35: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned __int16)*( _DWORD *)recog_data_0.operand[1] == 66 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26475:35: error: use of undeclared identifier 'recog_data_0'
&& ( unsigned __int16)*( _DWORD *)recog_data_0.operand[2] == 66 ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26485:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x4x; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26486:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3d = ( rtx)x2[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26494:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x4z; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26503:35: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned __int16)*( _DWORD *)recog_data_0.operand[1] == 66 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26504:35: error: use of undeclared identifier 'recog_data_0'
&& ( unsigned __int16)*( _DWORD *)recog_data_0.operand[2] == 66 ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26514:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x4w; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26515:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3c = ( rtx)x2[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26523:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x4y; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/insn-recog.c:26532:35: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned __int16)*( _DWORD *)recog_data_0.operand[1] == 66 
                                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_21/src/obj/insn-recog.o] Error 1
